micronfig_macros/tests/sources/wrong_conversion_trait_fromstr.rs
micronfig::config! {
	GARASAUTO: String > std::convert::Infallible,
}

fn main() {
	println!("{:?}", GARASAUTO())
}
